--- a/web/static/index.html
+++ b/web/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <!--# include file="eum.html" -->
     <title>Stan's Robot Shop</title>
-    <link rel="shortcut icon" type="image/png" href="/media/instana_icon_square.png"/>
+    <link rel="shortcut icon" type="image/png" href="/media/robot-mil.jpeg"/>
     <style type="text/css">
         @import url('https://fonts.googleapis.com/css?family=Orbitron');
         @import url('/css/style.css');
