Replaced Stan by Vidyadhar

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!--# include file="eum.html" -->
-    <title>Stan's Robot Shop</title>
+    <title>Vidyadhar's Robot Shop</title>
     <link rel="shortcut icon" type="image/png" href="/media/robot-mil.jpeg"/>
     <style type="text/css">
         @import url('https://fonts.googleapis.com/css?family=Orbitron');
@@ -15,7 +15,7 @@
 
 <body ng-app="robotshop">
 <div ng-controller="shopform">
-    <h1><a href="/">Stan's Robot Shop</a></h1>
+    <h1><a href="/">Vidyadhar's Robot Shop</a></h1>
     <span id="stan">
         <img src="/media/stan.png"/>
     </span>
